cambio de linkedin a gmail seccion contacto

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -47,7 +47,7 @@
                     <a href="https://www.instagram.com/jairodaniel_gm/" target="_blank"><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a>
                     <a href="https://wa.me/50255112882" target="_blank"><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
                     <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
-                    <a href="" target="_blank"><img src="../../../assets/images/icons8-linkedin.svg" alt="link linkedin"></a>
+                    <a href="mailto:jairo.danielgm@gmail.com"><img src="../../../assets/images/gmail-svgrepo-com.svg" alt="link correo electronico"></a>
                 </div>
                 <a href="../../../assets/Documentos/IT Jairo García CV.pdf" download="CV_Jairo_Garcia">
                   <button class="button"> Descargar CV</button>
