--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -29,7 +29,7 @@
     <div id="AboutMe">
         <div id="contenido2">
             <div id="imagen">
-                <img src="../../../assets/images/foto_home_editada.jpg" alt="">
+                <img src="../../../assets/images/foto_home_editada.jpg" alt="imagen de jairo">
             </div>
             <div id="info">
                 <p class="subtitulo"><b>Biografia</b></p>
