--- a/frontend/src/app/componentes/blog/blog.component.html
+++ b/frontend/src/app/componentes/blog/blog.component.html
@@ -1,4 +1,7 @@
-<div class="Working">
-  <h1>Work in Procces!</h1>
-  <h3>Actualmente estoy trabajando en </h3>
-</div>
+<body>
+  <div id="Working">
+    <h1>Work in Procces!</h1>
+    <h3>Actualmente estoy trabajando en traer este apartado :)</h3>
+    <a href=""><button></button></a>
+  </div>
+</body>
