modificacion de ruta de imagenes

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -14,7 +14,7 @@
 
         <div id="contenido1">
             <div id="imagen">
-                <img src="../../../assets/images/me_circular_editada.jpg">
+                <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/main/frontend/src/assets/images/me_circular_editada.jpg">
             </div>
             <div id="space1">
                 <div id="titulo1_home">Jairo Garcia</div>
@@ -29,7 +29,7 @@
     <div id="AboutMe">
         <div id="contenido2">
             <div id="imagen">
-                <img src="../../../assets/images/foto_home_editada.jpg" alt="imagen de jairo">
+                <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/main/frontend/src/assets/images/foto_home_editada.jpg" alt="imagen de jairo">
             </div>
             <div id="info">
                 <p class="subtitulo"><b>Biografia</b></p>
@@ -43,11 +43,11 @@
                 </p>
                 <p id="contacto">Contactame!</p>
                 <div id="redes">
-                    <a href="https://github.com/jairoDGM" target="_blank"><img src="../../../assets/images/icons8-github.svg" alt="link github"></a>
-                    <a href="https://www.instagram.com/jairodaniel_gm/" target="_blank"><img src="../../../assets/images/icons8-instagram.svg" alt="link instagram"></a>
-                    <a href="https://wa.me/50255112882" target="_blank"><img src="../../../assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
-                    <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="../../../assets/images/icons8-facebook.svg" alt="link facebook"></a>
-                    <a href="mailto:jairo.danielgm@gmail.com"><img src="../../../assets/images/gmail-svgrepo-com.svg" alt="link correo electronico"></a>
+                    <a href="https://github.com/jairoDGM" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-github.svg" alt="link github"></a>
+                    <a href="https://www.instagram.com/jairodaniel_gm/" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-instagram.svg" alt="link instagram"></a>
+                    <a href="https://wa.me/50255112882" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-whatsapp.svg" alt="link whatsapp"></a>
+                    <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-facebook.svg" alt="link facebook"></a>
+                    <a href="mailto:jairo.danielgm@gmail.com"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/gmail-svgrepo-com.svg" alt="link correo electronico"></a>
                 </div>
                 <a href="../../../assets/Documentos/IT Jairo García CV.pdf" download="CV_Jairo_Garcia">
                   <button class="button"> Descargar CV</button>
@@ -68,21 +68,21 @@
 
                 <div class="card">
                     <h1><b>Gestion DB</b></h1>
-                    <img src="../../../assets/images/icons8-microsoft-sql-server.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-microsoft-sql-server.svg" alt="">
                     <p>Creacion de Base de datos relacionales; especificas para las caracteristicas
                     y necesidades de tu programa o pagina web. Empezando con diagramas ER hasta la finalizacion de tu DB</p>
                 </div>
 
                 <div class="card">
                     <h1><b>Landing Pages</b></h1>
-                    <img src="../../../assets/images/web-page-browser-window-svgrepo-com.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/web-page-browser-window-svgrepo-com.svg" alt="">
                     <p>Diseño y Construccion de paginas web para presentacion, ideales para negocios o Empresas
                     que desean ampliar sus clientes potenciales.</p>
                 </div>
 
                 <div class="card">
                     <h1><b>Web Apps</b></h1>
-                    <img src="../../../assets/images/browser-website-svgrepo-com.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/browser-website-svgrepo-com.svg" alt="">
                     <p>Creacion de un ecosistema completo para tu pagina web, desde el frontend hasta el backend, y por su puesto la Base
                     de Datos. Ideal para negocios que desean operar e interactuar de distintas maneras con sus clientes/usuarios</p>
                 </div>
@@ -93,43 +93,43 @@
                 <div class="slider">
                     <div class="slide-track">
                         <div class="slide">
-                            <img src="../../../assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                          <img src="../../../assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                          <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/angular-icon-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/css-3-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/css-3-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/git-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/git-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/github-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/github-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/html-5-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/html-5-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/java-4-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/java-4-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/javascript-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/javascript-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/msql-server-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/msql-server-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/mysql-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/mysql-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/nodejs-1-logo-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/nodejs-1-logo-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/python-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/python-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                         <div class="slide">
-                            <img src="../../../assets/images/logos/typescript-icon-svgrepo-com.svg" height="100" width="250" alt="" />
+                            <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/typescript-icon-svgrepo-com.svg" height="100" width="250" alt="" />
                         </div>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
 
                 <div class="card_project">
                     <h1><b>Tienda Virtual</b></h1>
-                    <img src="../../../assets/images/logos/Tienda.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/Tienda.svg" alt="">
                     <p>Pagina web de productos electronicos, en la cual se pueden gestionar compras y pedidos haciendo
                       uso de una Base de Datos distribuida; la cual es consultada en la parte del backend.
                     </p>
@@ -160,7 +160,7 @@
 
                 <div class="card_project">
                     <h1><b>Graficadora EDO</b></h1>
-                    <img src="../../../assets/images/logos/graficadora.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/graficadora.svg" alt="">
                     <p>Software matematico desarrollado completamente en Java, el cual es capaz de resolver
                     ecuaciones diferenciales de primer orden; esto a travez de la implementacion del "Metodo de Euler".</p>
                     <a href="https://github.com/jairoDGM/Solucionador-Edos.git" class="btn41-43 btn-41" target="_blank">
@@ -170,7 +170,7 @@
 
                 <div class="card_project">
                     <h1><b>Refriteca Website</b></h1>
-                    <img src="../../../assets/images/logos/Website.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/Website.svg" alt="">
                     <p>Pagina web diseñada para la empresa "Refriteca" para poder extender su alcance con respecto
                       a sus clientes objetivos
                     </p>
@@ -181,7 +181,7 @@
 
                 <div class="card_project">
                     <h1><b>Quiniela Web</b></h1>
-                    <img src="../../../assets/images/logos/quiniela.svg" alt="">
+                    <img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/logos/quiniela.svg" alt="">
                     <p>Pagina web que implementa por completo un esquema "CRUD" para poder gestionar una quiniela
                       con diferentes usuarios y apartados.
                     </p>
