modificacion link a mi cv

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -49,7 +49,7 @@
                     <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-facebook.svg" alt="link facebook"></a>
                     <a href="mailto:jairo.danielgm@gmail.com"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/gmail-svgrepo-com.svg" alt="link correo electronico"></a>
                 </div>
-                <a href="../../../assets/Documentos/IT Jairo García CV.pdf" download="CV_Jairo_Garcia">
+                <a href="../../../assets/Documentos/CV IT 2023.pdf" download="CV_Jairo_Garcia">
                   <button class="button"> Descargar CV</button>
                 </a>
             </div>
