cambio de link a cv

--- a/frontend/src/app/componentes/about-me/about-me.component.html
+++ b/frontend/src/app/componentes/about-me/about-me.component.html
@@ -49,7 +49,7 @@
                     <a href="https://www.facebook.com/jairo.garcia.JG" target="_blank"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/icons8-facebook.svg" alt="link facebook"></a>
                     <a href="mailto:jairo.danielgm@gmail.com"><img src="https://raw.githubusercontent.com/jairoDGM/Personal_Website/33de35ee742f0a8586b741e51b7625225ec720b3/frontend/src/assets/images/gmail-svgrepo-com.svg" alt="link correo electronico"></a>
                 </div>
-                <a href="../../../assets/Documentos/CV IT 2023.pdf" download="CV_Jairo_Garcia">
+                <a href="https://github.com/jairoDGM/Personal_Website/blob/2a7b23f630abf60fbef3e0c0f51e14df7b83adbe/frontend/src/assets/Documentos/CV%20IT%202023.pdf" target="_blank">
                   <button class="button"> Descargar CV</button>
                 </a>
             </div>
